# shell-toy

./: .gitmodules  BuildConfig.toml  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: codeberg-mirror.yaml  pr-build-check.yaml  release.yaml
src/: cli.rs  cowsay.rs  file.rs  fortune.rs  img.rs  lib.rs  main.rs  new_parser.rs  parser.rs  strfile.rs
