[package]
name = "shell-toy"
version = "0.3.2"
edition = "2021"
description = "A \"cowsay | fortune\" implementation in Rust, i.e. a nice little toy to liven up your shell."
license = "MIT"
repository = "https://github.com/FaceFTW/shell-toy"
keywords = ["terminal", "customization", "fortune", "cowsay", "fortune-cookie"]


[[bin]]
name = "sh-toy"
path = "src/main.rs"

[dependencies]
owo-colors = "4"
nom = "7"
tinyrand = "0.5"
getrandom = "0.2"
argh = "0.1"
textwrap = "0.16"
strip-ansi-escapes = "0.2"
unicode-width = "0.1"
cfg-if = "1"

[build-dependencies]
proc-macro2 = "1"
quote = "1"
cfg-if = "1"


[features]
default = []
inline-fortune = []
inline-off-fortune = []
fortune-git = []
inline-cowsay = []
cowsay-git = []


[profile.release]
codegen-units = 1
lto = "thin"
opt-level = 'z'
strip = true
panic = "abort"
