[package]
name = "shell-toy"
version = "0.6.3"
edition = "2024"
description = "A \"fortune | cowsay\" implementation in Rust, i.e. a nice little toy to liven up your shell."
license = "MIT"
repository = "https://github.com/FaceFTW/shell-toy"
keywords = ["terminal", "customization", "fortune", "cowsay", "fortune-cookie"]


[[bin]]
name = "sh-toy"
path = "src/main.rs"

[dependencies]
owo-colors = "4"
winnow = "0.7"
tinyrand = "0.5"
getrandom = "0.3"
argh = "0.1"
textwrap = "0.16"
strip-ansi-escapes = "0.2"
unicode-width = "0.2"
cfg-if = "1"

[build-dependencies]
proc-macro2 = "1"
quote = "1"
cfg-if = "1"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
zip = { version = "2.2", features = [
	"deflate",
	"deflate64",
	"lzma",
	"xz",
], default-features = false }
fs_extra = "1.3"


[features]
default = []
inline-fortune = []
inline-off-fortune = []
inline-cowsay = []
# Easier Flags for identifying feature combos
lite = []
standard = ["inline-fortune", "inline-cowsay"]
max = ["inline-fortune", "inline-off-fortune", "inline-cowsay"]
debug = ["winnow/debug"]

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = 'z'
strip = true
panic = "abort"
